Modification de plein de truc sur le projet mais ca marche pas super encore